@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <releases>
   <release id="gnome-2-14" stringfrozen="true" regenerate="false">
-    <_description>Gnome 2.14</_description>
+    <_description>Gnome 2.14 (old stable)</_description>
     <category id="external">
       <_description>External Dependencies</_description>
       <module id="gst-plugins"/>
@@ -255,7 +255,7 @@
     <module id="xchat-gnome"/>
   </release>
   <release id="gnome-2-16" stringfrozen="true">
-    <_description>Gnome 2.16</_description>
+    <_description>Gnome 2.16 (old stable)</_description>
     <category id="platform">
       <_description>GNOME developer platform. Essential software.</_description>
       <module id="atk"/>
@@ -341,7 +341,7 @@
     </category>
   </release>
   <release id="gnome-2-18" stringfrozen="true">
-    <_description>Gnome 2.18</_description>
+    <_description>Gnome 2.18 (stable)</_description>
     <category id="platform">
       <_description>GNOME developer platform.</_description>
       <module id="atk" branch="gnome-2-18"/>
@@ -435,6 +435,107 @@
       <_description>Development Tools.</_description>
       <module id="devhelp"/>
       <module id="glade3" branch="gnome-2-18"/>
+    </category>
+  </release>
+  <release id="gnome-2-20">
+    <_description>Gnome 2.20 (development)</_description>
+    <category id="platform">
+      <_description>GNOME developer platform.</_description>
+      <module id="atk"/>
+      <module id="gail"/>
+      <module id="gconf"/>
+      <module id="glib" branch="glib-2-12"/>
+      <module id="gnome-vfs"/>
+      <module id="gtk+" branch="gtk-2-10"/>
+      <module id="libbonobo"/>
+      <module id="libbonoboui"/>
+      <module id="libgnome"/>
+      <module id="libgnomecanvas"/>
+      <module id="libgnomeui"/>
+    </category>
+    <category id="desktop">
+      <_description>GNOME desktop.</_description>
+      <module id="alacarte"/>
+      <module id="bug-buddy"/>
+      <module id="dasher"/>
+      <module id="deskbar-applet"/>
+      <module id="eel"/>
+      <module id="ekiga" branch="gnome-2-14"/>
+      <module id="eog"/>
+      <module id="epiphany"/>
+      <module id="evince"/>
+      <module id="evolution"/>
+      <module id="evolution-data-server"/>
+      <module id="evolution-exchange"/>
+      <module id="evolution-webcal"/>
+      <module id="fast-user-switch-applet"/>
+      <module id="file-roller"/>
+      <module id="gcalctool"/>
+      <module id="gconf-editor"/>
+      <module id="gdm2"/>
+      <module id="gedit"/>
+      <module id="gnome-applets"/>
+      <module id="gnome-backgrounds"/>
+      <module id="gnome-control-center"/>
+      <module id="gnome-desktop"/>
+      <module id="gnome-doc-utils"/>
+      <module id="gnome-games"/>
+      <module id="gnome-icon-theme"/>
+      <module id="gnome-keyring"/>
+      <module id="gnome-keyring-manager"/>
+      <module id="gnome-mag"/>
+      <module id="gnome-media"/>
+      <module id="gnome-menus"/>
+      <module id="gnome-netstatus"/>
+      <module id="gnome-nettool"/>
+      <module id="gnome-panel"/>
+      <module id="gnome-power-manager"/>
+      <module id="gnome-screensaver"/>
+      <module id="gnome-session"/>
+      <module id="gnome-system-monitor"/>
+      <module id="gnome-system-tools"/>
+      <module id="gnome-terminal"/>
+      <module id="gnome-themes"/>
+      <module id="gnome-user-docs"/>
+      <module id="gnome-utils"/>
+      <module id="gnome-volume-manager"/>
+      <module id="gnopernicus"/>
+      <module id="gok"/>
+      <module id="gtk-engines"/>
+      <module id="gtkhtml"/>
+      <module id="gtksourceview"/>
+      <module id="gucharmap"/>
+      <module id="libgnomekbd"/>
+      <module id="libgnomeprint"/>
+      <module id="libgnomeprintui"/>
+      <module id="libgtop"/>
+      <module id="libwnck"/>
+      <module id="metacity"/>
+      <module id="nautilus"/>
+      <module id="nautilus-cd-burner"/>
+      <module id="orca"/>
+      <module id="seahorse"/>
+      <module id="sound-juicer"/>
+      <module id="tomboy"/>
+      <module id="totem"/>
+      <module id="vino"/>
+      <module id="vte"/>
+      <module id="yelp"/>
+      <module id="zenity"/>
+    </category>
+    <category id="admin">
+      <_description>Administration Tools.</_description>
+      <module id="pessulus"/>
+      <module id="sabayon" />
+    </category>
+    <category id="devtools">
+      <_description>Development Tools.</_description>
+      <module id="devhelp"/>
+      <module id="glade3"/>
+    </category>
+    <category id="proposed">
+      <_description>New module proposals.</_description>
+      <module id="accerciser"/>
     </category>
   </release>
   <release id="fifth-toe">
