@@ -1,3 +1,7 @@
+2007-04-10  Claude Paroz  <claude@2xlibre.net>
+
+	* releases.xml.in: Created new GNOME 2.20 release.
+
 2007-04-09  Claude Paroz  <claude@2xlibre.net>
 
 	* gnome-modules.xml.in:
